fret-electron/support/CopilotParser/CopilotParser.js
// *****************************************************************************
// Notices:
//
// Copyright ©2019, 2021 United States Government as represented by the Administrator
// of the National Aeronautics and Space Administration. All Rights Reserved.
//
// Disclaimers
//
// No Warranty: THE SUBJECT SOFTWARE IS PROVIDED "AS IS" WITHOUT ANY WARRANTY OF
// ANY KIND, EITHER EXPRESSED, IMPLIED, OR STATUTORY, INCLUDING, BUT NOT LIMITED
// TO, ANY WARRANTY THAT THE SUBJECT SOFTWARE WILL CONFORM TO SPECIFICATIONS,
// ANY IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE,
// OR FREEDOM FROM INFRINGEMENT, ANY WARRANTY THAT THE SUBJECT SOFTWARE WILL BE
// ERROR FREE, OR ANY WARRANTY THAT DOCUMENTATION, IF PROVIDED, WILL CONFORM TO
// THE SUBJECT SOFTWARE. THIS AGREEMENT DOES NOT, IN ANY MANNER, CONSTITUTE AN
// ENDORSEMENT BY GOVERNMENT AGENCY OR ANY PRIOR RECIPIENT OF ANY RESULTS,
// RESULTING DESIGNS, HARDWARE, SOFTWARE PRODUCTS OR ANY OTHER APPLICATIONS
// RESULTING FROM USE OF THE SUBJECT SOFTWARE.  FURTHER, GOVERNMENT AGENCY
// DISCLAIMS ALL WARRANTIES AND LIABILITIES REGARDING THIRD-PARTY SOFTWARE, IF
// PRESENT IN THE ORIGINAL SOFTWARE, AND DISTRIBUTES IT ''AS IS.''
//
// Waiver and Indemnity:  RECIPIENT AGREES TO WAIVE ANY AND ALL CLAIMS AGAINST
// THE UNITED STATES GOVERNMENT, ITS CONTRACTORS AND SUBCONTRACTORS, AS WELL AS
// ANY PRIOR RECIPIENT.  IF RECIPIENT'S USE OF THE SUBJECT SOFTWARE RESULTS IN
// ANY LIABILITIES, DEMANDS, DAMAGES, EXPENSES OR LOSSES ARISING FROM SUCH USE,
// INCLUDING ANY DAMAGES FROM PRODUCTS BASED ON, OR RESULTING FROM, RECIPIENT'S
// USE OF THE SUBJECT SOFTWARE, RECIPIENT SHALL INDEMNIFY AND HOLD HARMLESS THE
// UNITED STATES GOVERNMENT, ITS CONTRACTORS AND SUBCONTRACTORS, AS WELL AS ANY
// PRIOR RECIPIENT, TO THE EXTENT PERMITTED BY LAW.  RECIPIENT'S SOLE REMEDY FOR
// ANY SUCH MATTER SHALL BE THE IMMEDIATE, UNILATERAL TERMINATION OF THIS
// AGREEMENT.
// *****************************************************************************
// Generated from CopilotParser.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var CopilotParserListener = require('./CopilotParserListener').CopilotParserListener;
var grammarFileName = "CopilotParser.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'='", "'('", "')'", "'++'", "'#'", "'['", "']'", 
                     "','", "'Field'", "'Just'", "'Nothing'", "'array'", 
                     "'constant'", "'drop'", "'extern'", null, null, null, 
                     null, null, "'mux'", null, null, null, "'\"'", "'\\'" ];

var symbolicNames = [ null, "Surrogate_id_SYMB_0", "Surrogate_id_SYMB_1", 
                      "Surrogate_id_SYMB_2", "Surrogate_id_SYMB_3", "Surrogate_id_SYMB_4", 
                      "Surrogate_id_SYMB_5", "Surrogate_id_SYMB_6", "Surrogate_id_SYMB_7", 
                      "Surrogate_id_SYMB_8", "Surrogate_id_SYMB_9", "Surrogate_id_SYMB_10", 
                      "Surrogate_id_SYMB_11", "Surrogate_id_SYMB_12", "Surrogate_id_SYMB_13", 
                      "Surrogate_id_SYMB_14", "VBOOL", "VFLOAT", "VINT", 
                      "OPOne", "OPTwo", "OPThree", "IDENT", "WS", "ErrorToken", 
                      "STRING", "STRINGESC" ];

var ruleNames =  [ "listDef", "def", "stream", "sampleV", "valueList", "listValue", 
                   "value", "listField", "field" ];

function CopilotParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

CopilotParser.prototype = Object.create(antlr4.Parser.prototype);
CopilotParser.prototype.constructor = CopilotParser;

Object.defineProperty(CopilotParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

CopilotParser.EOF = antlr4.Token.EOF;
CopilotParser.Surrogate_id_SYMB_0 = 1;
CopilotParser.Surrogate_id_SYMB_1 = 2;
CopilotParser.Surrogate_id_SYMB_2 = 3;
CopilotParser.Surrogate_id_SYMB_3 = 4;
CopilotParser.Surrogate_id_SYMB_4 = 5;
CopilotParser.Surrogate_id_SYMB_5 = 6;
CopilotParser.Surrogate_id_SYMB_6 = 7;
CopilotParser.Surrogate_id_SYMB_7 = 8;
CopilotParser.Surrogate_id_SYMB_8 = 9;
CopilotParser.Surrogate_id_SYMB_9 = 10;
CopilotParser.Surrogate_id_SYMB_10 = 11;
CopilotParser.Surrogate_id_SYMB_11 = 12;
CopilotParser.Surrogate_id_SYMB_12 = 13;
CopilotParser.Surrogate_id_SYMB_13 = 14;
CopilotParser.Surrogate_id_SYMB_14 = 15;
CopilotParser.VBOOL = 16;
CopilotParser.VFLOAT = 17;
CopilotParser.VINT = 18;
CopilotParser.OPOne = 19;
CopilotParser.OPTwo = 20;
CopilotParser.OPThree = 21;
CopilotParser.IDENT = 22;
CopilotParser.WS = 23;
CopilotParser.ErrorToken = 24;
CopilotParser.STRING = 25;
CopilotParser.STRINGESC = 26;

CopilotParser.RULE_listDef = 0;
CopilotParser.RULE_def = 1;
CopilotParser.RULE_stream = 2;
CopilotParser.RULE_sampleV = 3;
CopilotParser.RULE_valueList = 4;
CopilotParser.RULE_listValue = 5;
CopilotParser.RULE_value = 6;
CopilotParser.RULE_listField = 7;
CopilotParser.RULE_field = 8;


function ListDefContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CopilotParser.RULE_listDef;
    this.result = null
    return this;
}

ListDefContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ListDefContext.prototype.constructor = ListDefContext;


 
ListDefContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
    this.result = ctx.result;
};

function ListDef_EmptyContext(parser, ctx) {
	ListDefContext.call(this, parser);
    ListDefContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ListDef_EmptyContext.prototype = Object.create(ListDefContext.prototype);
ListDef_EmptyContext.prototype.constructor = ListDef_EmptyContext;

CopilotParser.ListDef_EmptyContext = ListDef_EmptyContext;

ListDef_EmptyContext.prototype.enterRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.enterListDef_Empty(this);
	}
};

ListDef_EmptyContext.prototype.exitRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.exitListDef_Empty(this);
	}
};


function ListDef_PrependFirstContext(parser, ctx) {
	ListDefContext.call(this, parser);
    ListDefContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ListDef_PrependFirstContext.prototype = Object.create(ListDefContext.prototype);
ListDef_PrependFirstContext.prototype.constructor = ListDef_PrependFirstContext;

CopilotParser.ListDef_PrependFirstContext = ListDef_PrependFirstContext;

ListDef_PrependFirstContext.prototype.listDef = function() {
    return this.getTypedRuleContext(ListDefContext,0);
};

ListDef_PrependFirstContext.prototype.def = function() {
    return this.getTypedRuleContext(DefContext,0);
};
ListDef_PrependFirstContext.prototype.enterRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.enterListDef_PrependFirst(this);
	}
};

ListDef_PrependFirstContext.prototype.exitRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.exitListDef_PrependFirst(this);
	}
};



CopilotParser.prototype.listDef = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new ListDefContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 0;
    this.enterRecursionRule(localctx, 0, CopilotParser.RULE_listDef, _p);
    try {
        this.enterOuterAlt(localctx, 1);
        localctx = new ListDef_EmptyContext(this, localctx);
        this._ctx = localctx;
        _prevctx = localctx;


        this._ctx.stop = this._input.LT(-1);
        this.state = 27;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                localctx = new ListDef_PrependFirstContext(this, new ListDefContext(this, _parentctx, _parentState));
                this.pushNewRecursionContext(localctx, _startState, CopilotParser.RULE_listDef);
                this.state = 21;
                if (!( this.precpred(this._ctx, 1))) {
                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
                }
                this.state = 22;
                this.def();
         
            }
            this.state = 29;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};


function DefContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CopilotParser.RULE_def;
    this.result = null
    return this;
}

DefContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DefContext.prototype.constructor = DefContext;


 
DefContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
    this.result = ctx.result;
};


function MkDefContext(parser, ctx) {
	DefContext.call(this, parser);
    DefContext.prototype.copyFrom.call(this, ctx);
    return this;
}

MkDefContext.prototype = Object.create(DefContext.prototype);
MkDefContext.prototype.constructor = MkDefContext;

CopilotParser.MkDefContext = MkDefContext;

MkDefContext.prototype.IDENT = function() {
    return this.getToken(CopilotParser.IDENT, 0);
};

MkDefContext.prototype.Surrogate_id_SYMB_0 = function() {
    return this.getToken(CopilotParser.Surrogate_id_SYMB_0, 0);
};

MkDefContext.prototype.stream = function() {
    return this.getTypedRuleContext(StreamContext,0);
};
MkDefContext.prototype.enterRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.enterMkDef(this);
	}
};

MkDefContext.prototype.exitRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.exitMkDef(this);
	}
};



CopilotParser.DefContext = DefContext;

CopilotParser.prototype.def = function() {

    var localctx = new DefContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, CopilotParser.RULE_def);
    try {
        localctx = new MkDefContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 30;
        this.match(CopilotParser.IDENT);
        this.state = 31;
        this.match(CopilotParser.Surrogate_id_SYMB_0);
        this.state = 32;
        this.stream(0);

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StreamContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CopilotParser.RULE_stream;
    this.result = null
    return this;
}

StreamContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StreamContext.prototype.constructor = StreamContext;


 
StreamContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
    this.result = ctx.result;
};

function StreamStructContext(parser, ctx) {
	StreamContext.call(this, parser);
    StreamContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StreamStructContext.prototype = Object.create(StreamContext.prototype);
StreamStructContext.prototype.constructor = StreamStructContext;

CopilotParser.StreamStructContext = StreamStructContext;

StreamStructContext.prototype.stream = function() {
    return this.getTypedRuleContext(StreamContext,0);
};

StreamStructContext.prototype.Surrogate_id_SYMB_4 = function() {
    return this.getToken(CopilotParser.Surrogate_id_SYMB_4, 0);
};

StreamStructContext.prototype.IDENT = function() {
    return this.getToken(CopilotParser.IDENT, 0);
};
StreamStructContext.prototype.enterRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.enterStreamStruct(this);
	}
};

StreamStructContext.prototype.exitRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.exitStreamStruct(this);
	}
};


function StreamOPContext(parser, ctx) {
	StreamContext.call(this, parser);
    StreamContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StreamOPContext.prototype = Object.create(StreamContext.prototype);
StreamOPContext.prototype.constructor = StreamOPContext;

CopilotParser.StreamOPContext = StreamOPContext;

StreamOPContext.prototype.OPOne = function() {
    return this.getToken(CopilotParser.OPOne, 0);
};

StreamOPContext.prototype.stream = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StreamContext);
    } else {
        return this.getTypedRuleContext(StreamContext,i);
    }
};

StreamOPContext.prototype.OPThree = function() {
    return this.getToken(CopilotParser.OPThree, 0);
};

StreamOPContext.prototype.OPTwo = function() {
    return this.getToken(CopilotParser.OPTwo, 0);
};
StreamOPContext.prototype.enterRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.enterStreamOP(this);
	}
};

StreamOPContext.prototype.exitRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.exitStreamOP(this);
	}
};


function ExternStreamContext(parser, ctx) {
	StreamContext.call(this, parser);
    StreamContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ExternStreamContext.prototype = Object.create(StreamContext.prototype);
ExternStreamContext.prototype.constructor = ExternStreamContext;

CopilotParser.ExternStreamContext = ExternStreamContext;

ExternStreamContext.prototype.Surrogate_id_SYMB_14 = function() {
    return this.getToken(CopilotParser.Surrogate_id_SYMB_14, 0);
};

ExternStreamContext.prototype.STRING = function() {
    return this.getToken(CopilotParser.STRING, 0);
};

ExternStreamContext.prototype.sampleV = function() {
    return this.getTypedRuleContext(SampleVContext,0);
};
ExternStreamContext.prototype.enterRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.enterExternStream(this);
	}
};

ExternStreamContext.prototype.exitRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.exitExternStream(this);
	}
};


function StreamAppendContext(parser, ctx) {
	StreamContext.call(this, parser);
    StreamContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StreamAppendContext.prototype = Object.create(StreamContext.prototype);
StreamAppendContext.prototype.constructor = StreamAppendContext;

CopilotParser.StreamAppendContext = StreamAppendContext;

StreamAppendContext.prototype.valueList = function() {
    return this.getTypedRuleContext(ValueListContext,0);
};

StreamAppendContext.prototype.Surrogate_id_SYMB_3 = function() {
    return this.getToken(CopilotParser.Surrogate_id_SYMB_3, 0);
};

StreamAppendContext.prototype.stream = function() {
    return this.getTypedRuleContext(StreamContext,0);
};
StreamAppendContext.prototype.enterRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.enterStreamAppend(this);
	}
};

StreamAppendContext.prototype.exitRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.exitStreamAppend(this);
	}
};


function StreamDropContext(parser, ctx) {
	StreamContext.call(this, parser);
    StreamContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StreamDropContext.prototype = Object.create(StreamContext.prototype);
StreamDropContext.prototype.constructor = StreamDropContext;

CopilotParser.StreamDropContext = StreamDropContext;

StreamDropContext.prototype.Surrogate_id_SYMB_13 = function() {
    return this.getToken(CopilotParser.Surrogate_id_SYMB_13, 0);
};

StreamDropContext.prototype.VINT = function() {
    return this.getToken(CopilotParser.VINT, 0);
};

StreamDropContext.prototype.stream = function() {
    return this.getTypedRuleContext(StreamContext,0);
};
StreamDropContext.prototype.enterRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.enterStreamDrop(this);
	}
};

StreamDropContext.prototype.exitRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.exitStreamDrop(this);
	}
};


function Coercion_StreamContext(parser, ctx) {
	StreamContext.call(this, parser);
    StreamContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Coercion_StreamContext.prototype = Object.create(StreamContext.prototype);
Coercion_StreamContext.prototype.constructor = Coercion_StreamContext;

CopilotParser.Coercion_StreamContext = Coercion_StreamContext;

Coercion_StreamContext.prototype.Surrogate_id_SYMB_1 = function() {
    return this.getToken(CopilotParser.Surrogate_id_SYMB_1, 0);
};

Coercion_StreamContext.prototype.stream = function() {
    return this.getTypedRuleContext(StreamContext,0);
};

Coercion_StreamContext.prototype.Surrogate_id_SYMB_2 = function() {
    return this.getToken(CopilotParser.Surrogate_id_SYMB_2, 0);
};
Coercion_StreamContext.prototype.enterRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.enterCoercion_Stream(this);
	}
};

Coercion_StreamContext.prototype.exitRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.exitCoercion_Stream(this);
	}
};


function StreamIdentContext(parser, ctx) {
	StreamContext.call(this, parser);
    StreamContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StreamIdentContext.prototype = Object.create(StreamContext.prototype);
StreamIdentContext.prototype.constructor = StreamIdentContext;

CopilotParser.StreamIdentContext = StreamIdentContext;

StreamIdentContext.prototype.IDENT = function() {
    return this.getToken(CopilotParser.IDENT, 0);
};
StreamIdentContext.prototype.enterRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.enterStreamIdent(this);
	}
};

StreamIdentContext.prototype.exitRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.exitStreamIdent(this);
	}
};


function ConstStreamContext(parser, ctx) {
	StreamContext.call(this, parser);
    StreamContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ConstStreamContext.prototype = Object.create(StreamContext.prototype);
ConstStreamContext.prototype.constructor = ConstStreamContext;

CopilotParser.ConstStreamContext = ConstStreamContext;

ConstStreamContext.prototype.Surrogate_id_SYMB_12 = function() {
    return this.getToken(CopilotParser.Surrogate_id_SYMB_12, 0);
};

ConstStreamContext.prototype.value = function() {
    return this.getTypedRuleContext(ValueContext,0);
};
ConstStreamContext.prototype.enterRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.enterConstStream(this);
	}
};

ConstStreamContext.prototype.exitRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.exitConstStream(this);
	}
};



CopilotParser.prototype.stream = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new StreamContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 4;
    this.enterRecursionRule(localctx, 4, CopilotParser.RULE_stream, _p);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 72;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case CopilotParser.Surrogate_id_SYMB_1:
            localctx = new Coercion_StreamContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;

            this.state = 36;
            this.match(CopilotParser.Surrogate_id_SYMB_1);
            this.state = 37;
            this.stream(0);
            this.state = 38;
            this.match(CopilotParser.Surrogate_id_SYMB_2);

            break;
        case CopilotParser.IDENT:
            localctx = new StreamIdentContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 41;
            this.match(CopilotParser.IDENT);

            break;
        case CopilotParser.Surrogate_id_SYMB_12:
            localctx = new ConstStreamContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 43;
            this.match(CopilotParser.Surrogate_id_SYMB_12);
            this.state = 44;
            this.value();

            break;
        case CopilotParser.Surrogate_id_SYMB_14:
            localctx = new ExternStreamContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 47;
            this.match(CopilotParser.Surrogate_id_SYMB_14);
            this.state = 48;
            this.match(CopilotParser.STRING);
            this.state = 49;
            this.sampleV();

            break;
        case CopilotParser.Surrogate_id_SYMB_5:
            localctx = new StreamAppendContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 52;
            this.valueList();
            this.state = 53;
            this.match(CopilotParser.Surrogate_id_SYMB_3);
            this.state = 54;
            this.stream(6);

            break;
        case CopilotParser.Surrogate_id_SYMB_13:
            localctx = new StreamDropContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 57;
            this.match(CopilotParser.Surrogate_id_SYMB_13);
            this.state = 58;
            this.match(CopilotParser.VINT);
            this.state = 59;
            this.stream(5);

            break;
        case CopilotParser.OPOne:
            localctx = new StreamOPContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 62;
            this.match(CopilotParser.OPOne);
            this.state = 63;
            this.stream(4);

            break;
        case CopilotParser.OPThree:
            localctx = new StreamOPContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 66;
            this.match(CopilotParser.OPThree);
            this.state = 67;
            this.stream(0);
            this.state = 68;
            this.stream(0);
            this.state = 69;
            this.stream(2);

            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this._ctx.stop = this._input.LT(-1);
        this.state = 85;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                this.state = 83;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
                switch(la_) {
                case 1:
                    localctx = new StreamOPContext(this, new StreamContext(this, _parentctx, _parentState));
                    this.pushNewRecursionContext(localctx, _startState, CopilotParser.RULE_stream);
                    this.state = 74;
                    if (!( this.precpred(this._ctx, 3))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
                    }
                    this.state = 75;
                    this.match(CopilotParser.OPTwo);
                    this.state = 76;
                    this.stream(4);

                    break;

                case 2:
                    localctx = new StreamStructContext(this, new StreamContext(this, _parentctx, _parentState));
                    this.pushNewRecursionContext(localctx, _startState, CopilotParser.RULE_stream);
                    this.state = 79;
                    if (!( this.precpred(this._ctx, 1))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
                    }
                    this.state = 80;
                    this.match(CopilotParser.Surrogate_id_SYMB_4);
                    this.state = 81;
                    this.match(CopilotParser.IDENT);

                    break;

                } 
            }
            this.state = 87;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};


function SampleVContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CopilotParser.RULE_sampleV;
    this.result = null
    return this;
}

SampleVContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SampleVContext.prototype.constructor = SampleVContext;


 
SampleVContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
    this.result = ctx.result;
};


function SampleVNothingContext(parser, ctx) {
	SampleVContext.call(this, parser);
    SampleVContext.prototype.copyFrom.call(this, ctx);
    return this;
}

SampleVNothingContext.prototype = Object.create(SampleVContext.prototype);
SampleVNothingContext.prototype.constructor = SampleVNothingContext;

CopilotParser.SampleVNothingContext = SampleVNothingContext;

SampleVNothingContext.prototype.Surrogate_id_SYMB_10 = function() {
    return this.getToken(CopilotParser.Surrogate_id_SYMB_10, 0);
};
SampleVNothingContext.prototype.enterRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.enterSampleVNothing(this);
	}
};

SampleVNothingContext.prototype.exitRule = function(listener) {
    if(listener instanceof CopilotParserListener ) {
        listener.exitSampleVNothing(this);
	}
};

